[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/gui/SendToFriends.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/lobby_background.png" type="Texture" id=2]

[node name="SendToFriends" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 352.0
margin_bottom = 194.0

[node name="Label" type="Label" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.0
margin_right = 172.0
margin_bottom = 37.0
text = "This is your Fremb Hint. Give this to a Fremb so they can join you for a game. Don't forget to add your name beforing joining! Or enter your Fremb's hint below to join."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DynamicLink" type="LineEdit" parent="MarginContainer/Control"]
margin_left = 66.0
margin_top = 65.0
margin_right = 264.0
margin_bottom = 93.0
editable = false

[node name="LineEdit" type="LineEdit" parent="MarginContainer/Control"]
margin_left = 66.0
margin_top = 132.0
margin_right = 264.0
margin_bottom = 156.0
placeholder_text = "Fremb Hint"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/Control"]
margin_left = 66.0
margin_top = 98.0
margin_right = 264.0
margin_bottom = 125.0
placeholder_text = "Your Name"

[node name="Button" type="Button" parent="MarginContainer/Control"]
margin_left = 119.0
margin_top = 163.0
margin_right = 206.0
margin_bottom = 188.0
text = "Join Frembs"

[connection signal="pressed" from="MarginContainer/Control/Button" to="." method="_on_Button_pressed"]
